--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,18 +1,17 @@
 {% set version = "0.9" %}
 {% set name = "r-sirius-ms" %}
-{% set commit = "d1274f51b2af44c09def72fa3628f82a9e8de6b5" %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  url: https://github.com/boecker-lab/sirius-client-openAPI/archive/{{ commit }}.zip
-  sha256: 1edef52c472b9984b74532cf41ae9389f4191579085fd981922d8356d0ba887a
+  url: https://github.com/boecker-lab/sirius-client-openAPI/archive/refs/tags/v{{ version }}.zip
+  sha256: d5558cd419c8d46bdc958064cb97f963d1ea793866414c025906ec15033512ed
 
 build:
   noarch: generic
-  number: 0
+  number: 1
   merge_build_host: True  # [win]
   rpaths:
     - lib/R/lib/
