--- a/.ci_support/osx_arm_64_.yaml
+++ b/.ci_support/osx_arm_64_.yaml
@@ -1,12 +1,12 @@
-cdt_name:
-- cos6
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 coin_or_cbc:
 - '2.10'
-docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+macos_machine:
+- arm64-apple-darwin20.0.0
 target_platform:
-- linux-64
+- osx-arm64
