--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -28,6 +28,7 @@ jobs:
       else
         export IS_PR_BUILD="False"
       fi
+      chmod +x ./.scripts/run_osx_build.sh
       ./.scripts/run_osx_build.sh
     displayName: Run OSX build
     env:
