--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,16 +20,16 @@ build:
 requirements:
   build:
     - m2-zip               # [win]
-    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
+    - cross-r-base >=4.0    # [build_platform != target_platform]
   host:
-    - r-base >=4.0
+    - r-base >=3.5.0
     - r-jsonlite
     - r-httr2
     - r-r6
     - r-base64enc
     - r-stringr
   run:
-    - r-base >=4.0
+    - r-base >=3.5.0
     - r-jsonlite
     - r-httr2
     - r-r6
