try getting multi-os ci by specifying noarch_platforms
this may result in builds running on all specified OS
re-render pull request to check

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,3 +4,7 @@ github:
 conda_build:
   error_overlinking: true
 conda_forge_output_validation: true
+noarch_platforms:
+  - linux_64
+  - win_64
+  - osx_64
