adjust for sirius6 (#11)
* adjust for sirius6

* MNT: Re-rendered with conda-build 24.7.1, conda-smithy 3.37.2, and conda-forge-pinning 2024.08.09.16.11.22

* correct sha256

* update sirius-ms to 6.0.4

* update hash, use sirius-ms 6.0.4

* fix bugs in test script

* update hash + url

* update hash

---------

Co-authored-by: conda-forge-webservices[bot] <91080706+conda-forge-webservices[bot]@users.noreply.github.com>
Co-authored-by: Markus Fleischauer <markus.fleischauer@uni-jena.de>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,6 @@
-{% set version = "0.9" %}
+#{% set siriusVersion = "6.0.4" %}
+#{% set apiVersion = "2.1" %}
+{% set version = "2.1+sirius6.0.4" %}
 {% set name = "r-sirius-ms" %}
 
 package:
@@ -6,12 +8,12 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/boecker-lab/sirius-client-openAPI/archive/refs/tags/{{ version }}.zip
-  sha256: c26bbeb8b0b1c8a7894ab07254b5e0d7b681dbd1412b9ed7ff200c16ba3f2b0c
+  url: https://github.com/sirius-ms/sirius-client-openAPI/archive/refs/tags/{{ version }}.zip
+  sha256: 046a99355a1932775f6863279146ad77408d9e91cf52d1d243bc3581f5085e16
 
 build:
   noarch: generic
-  number: 2
+  number: 0
   merge_build_host: True  # [win]
   rpaths:
     - lib/R/lib/
@@ -22,20 +24,22 @@ requirements:
     - m2-zip               # [win]
     - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
-    - r-base >=3.5.0
+    - r-base >=4.0.0
     - r-jsonlite
     - r-httr2
     - r-r6
     - r-base64enc
     - r-stringr
+    - r-processx
   run:
-    - r-base >=3.5.0
+    - r-base >=4.0.0
     - r-jsonlite
     - r-httr2
     - r-r6
     - r-base64enc
     - r-stringr
-    - sirius-ms =5.7.0
+    - r-processx
+    - sirius-ms =6.0.4
 
 test:
   files:
