--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 #{% set siriusVersion = "6.0.4" %}
 #{% set apiVersion = "2.1" %}
-{% set version = "2.1+sirius6.0.4" %}
+{% set version = "2.1+sirius6.0.5" %}
 {% set name = "r-sirius-ms" %}
 
 package:
@@ -9,7 +9,7 @@ package:
 
 source:
   url: https://github.com/sirius-ms/sirius-client-openAPI/archive/refs/tags/{{ version }}.zip
-  sha256: 046a99355a1932775f6863279146ad77408d9e91cf52d1d243bc3581f5085e16
+  sha256: f6498e115bfe620919565b3becd2d6d81592a61ce7bb7faf2d3628005a253914
 
 build:
   noarch: generic
@@ -39,7 +39,7 @@ requirements:
     - r-base64enc
     - r-stringr
     - r-processx
-    - sirius-ms =6.0.4
+    - sirius-ms >=6.0.5
 
 test:
   files:
