--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,5 @@
 {% set version = "3.1+sirius6.3.3" %}
+{% set sirius_version = version.split("sirius")[1] %}
 {% set name = "r-sirius-ms" %}
 
 package:
@@ -37,7 +38,7 @@ requirements:
     - r-base64enc
     - r-stringr
     - r-processx
-    - sirius-ms >=6.1.1
+    - sirius-ms >={{ sirius_version }}
 
 test:
   files:
